--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,101 @@
-#dobInput{
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap');
+:root{
+    --primary-color : #34D399;
+    --bg-color : #111827;
+}
+
+*{
+    box-sizing: border-box;
+}
+body{
+    margin: 0;
+    padding: 0;
+    color : white;
+    background-color : var(--bg-color);
+}
+.heading{
+    /* border : 3px solid red;s */
+    text-align : center;
+    margin : 0;
+    padding : 1.5rem 0 1.5rem 0;
+    background-color: var(--primary-color);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    font-family: 'Signika Negative', sans-serif;
+
+}
+
+input{
     display: block;
 }
-#luckyNoInput{
-    display: block;
+
+.container{
+    /* border: 3px solid green; */
+    width : 50%;
+    max-width: 1000px;
+    margin: auto;
+    display : flex;
+    flex-direction: column;
+    align-items : center;
+    justify-content : center;
+    margin : 3rem auto 3rem auto;
 }
+
+label{
+    font-family: 'Signika Negative', sans-serif;
+    font-size : 1.2rem;
+    margin : 1rem 0 1rem 0;
+}
+
+input{
+    padding : 0.5rem;
+    width : 40%;
+    max-width : 300px;
+    border-radius: 10px;
+    border: 3px solid var(--primary-color);
+    font-family: 'Signika Negative', sans-serif;
+    font-size: 1.1rem;
+    outline: none;
+}
+
+#checkBtn{
+    padding : 0.5rem 1.5rem;
+    margin : 2rem 0 2rem 0;
+    outline: none;
+    border-radius: 10px;
+    border : 0;
+    background-color: var(--primary-color);
+    color : white;
+    font-size: 1.1rem;
+    font-family: 'Signika Negative', sans-serif;
+    cursor: pointer;
+}
+
+.message{
+    font-family: 'Signika Negative', sans-serif;
+    margin : 0;
+    font-size: 1.2rem;
+}
+
+.footer{
+    position: absolute;
+    bottom : 0;
+    left : 0;
+    /* border : 3px solid red; */
+    width : 100%;
+    text-align : center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-color: var(--primary-color);
+}
+
+.footer p{
+    margin : 1.5rem 0;
+    font-family: 'Signika Negative', sans-serif;
+    font-size: 1.2rem;
+    font-weight: bolder;
+    letter-spacing: 2px;
+    /* background-color: var(--primary-color); */
+}
+
+
